--- a/index.html
+++ b/index.html
@@ -198,10 +198,14 @@
 
           <section class="education">
             <h2 class="secondary-header right-header">Освіта</h2>
-            <h3 class="university-name third-header">
-              Національний технічний університет України “Київський
-              Політехнічний інститут”
-            </h3>
+            <a
+              target="_blank"
+              rel="nofollow"
+              class="university-name third-header link"
+              href="https://kpi.ua/"
+              >Національний технічний університет України “Київський
+              Політехнічний інститут”</a
+            >
             <ul class="university-list list">
               <li class="university-item">
                 <h4>Спеціалист</h4>
@@ -238,30 +242,58 @@
                 <h3 class="courses-name third-header">
                   «Javascript: занурення»
                 </h3>
-                <p class="company-name text">wayup</p>
-                <p class="date-text text">Серпень 2022</p>
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="company-name link"
+                  href="https://wayup.in/ua/"
+                  >wayup</a
+                >
+                <p class="date-text date-text-curses text">Серпень 2022</p>
                 <p class="text">сертифікат JSP35394141</p>
               </li>
               <li class="courses-item">
-                <h3 class="courses-name">«Веб-дизайнер: вибуховий старт»</h3>
-                <p class="company-name text">wayup</p>
-                <p class="date-text text">Липень 2022</p>
+                <h3 class="courses-name third-header">
+                  «Веб-дизайнер: вибуховий старт»
+                </h3>
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="company-name link"
+                  href="https://wayup.in/ua/"
+                  >wayup</a
+                >
+                <p class="date-text date-text-curses text">Липень 2022</p>
                 <p class="text">сертифікат VS49379161</p>
               </li>
               <li class="courses-item">
                 <h3 class="courses-name third-header">
                   Веб-верстальщик: начало
                 </h3>
-                <p class="company-name text">wayup</p>
-                <p class="date-text text">Червень 2022</p>
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="company-name link"
+                  href="https://wayup.in/ua/"
+                  >wayup</a
+                >
+                <p class="date-text date-text-curses text">Червень 2022</p>
                 <p class="text">сертифікат VVN50379161</p>
               </li>
               <li class="courses-item">
                 <h3 class="courses-name third-header">
                   Основи тестування програмного забезпечення
                 </h3>
-                <p class="company-name text">тренінговий центр "QATestLab"</p>
-                <p class="date-text text">Травень 2022 - Червень 2022</p>
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="company-name link"
+                  href="https://training.qatestlab.com/"
+                  >тренінговий центр "QATestLab"</a
+                >
+                <p class="date-text date-text-curses text">
+                  Травень 2022 - Червень 2022
+                </p>
                 <p class="text">сертифікат №428737</p>
               </li>
             </ul>
