--- a/index.html
+++ b/index.html
@@ -34,6 +34,57 @@
             class="foto-img"
           />
 
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a
+                href="https://www.instagram.com/irisha.kulik23/"
+                target="_blank"
+                rel="nofollow"
+                class="social-list-link link"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href="#"
+                target="_blank"
+                rel="nofollow"
+                class="social-list-link link"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href="https://www.facebook.com/irisha.kulik"
+                target="_blank"
+                rel="nofollow"
+                class="social-list-link link"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a
+                href="https://www.linkedin.com/in/%D0%B8%D1%80%D0%B8%D0%BD%D0%B0-%D0%BA%D1%83%D0%BB%D0%B8%D0%BA-96bb02242/"
+                target="_blank"
+                rel="nofollow"
+                class="social-list-link link"
+              >
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
           <section class="about">
             <h2 class="secondary-heder aside-secondary-heder">
               Особисті данні
